Fix youtube embed on mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -28,3 +28,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .animate-none-all * {
     animation: none;
 }
+
+iframe[src*=youtube] {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    padding-bottom: 10px;
+}
